Fixed about coe list on mobile, country code ui fixed for mobile, console errors removed

--- a/resources/scss/_condition-tabs.scss
+++ b/resources/scss/_condition-tabs.scss
@@ -49,11 +49,15 @@
         @include media('sm-tab')
         {
             min-width: initial;
+            font-size: 12px;
+            padding: 10px 15px;
             
         }
         @include media('md-tab')
         {
             min-width: initial;
+            font-size: 12px;
+            padding: 10px 15px;
             
         }
         @include media('x-sm-desktop')
